package org.iac2.common.model;

import io.github.edmm.model.DeploymentModel;
import lombok.Data;

@Data
public class SystemModel {
    private DeploymentModel deploymentModel;
}
